@@ -1,5 +1,6 @@
 package com.cissst.util;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 import java.security.NoSuchAlgorithmException;
 import java.security.MessageDigest;
 
@@ -13,8 +14,8 @@ public class MD5Util {
 			e.printStackTrace();
 		}
 		byte[] dest = md.digest(orgStr.getBytes());
-		BASE64Encoder base = new BASE64Encoder();
-		return base.encode(dest);
+		//BASE64Encoder base = new BASE64Encoder();
+		return Base64.encodeBase64String(dest);
 	}
 	
 //	public static void main(String[] args) throws NoSuchAlgorithmException {
